Fixed an overflow problem on the carousels

--- a/src/assets/styles/Portfolio.css
+++ b/src/assets/styles/Portfolio.css
@@ -39,6 +39,7 @@
 .Carousel div {
 	align-items: center !important;
 	justify-content: center !important;
+	width: inherit;
 }
 
 .Carousel div:hover {
